Troubleshoot contrast issues in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,7 +281,8 @@ footer .footer_column p {
 	
 }
 .footer a{
-	color: wheat;
+	color: black;
+	
 }
 
 .footer a:hover{
